--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-html, body, #container {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+.basic-grid {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  height: 100vh;
+  width: 100vw;
 	overflow: hidden;
+
+}
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+#container {
+	overflow: hidden;
+}
+#explorer {
+
 }
