--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .basic-grid {
   display: grid;
   grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 60fr;
   height: 100vh;
   width: 100vw;
 	overflow: hidden;
@@ -11,6 +12,11 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+#openFiles {
+  overflow: hidden;
+
 }
 
 #container {
