--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .basic-grid {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: 1fr 60fr;
+  grid-template-rows: 1.5em auto;
   height: 100vh;
   width: 100vw;
 	overflow: hidden;
