--- a/style.css
+++ b/style.css
@@ -22,7 +22,9 @@
 }
 
 #openFileActive {
+  display: inline-block;
   cursor: pointer;
+  height: 1.5em;
   background-color: rgb(30,30,30);
   color: rgb(200,200,200);
 }
