--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
   height: 100vh;
   width: 100vw;
 	overflow: hidden;
-
 }
 
 *{
@@ -17,9 +16,8 @@
 #openFilesContainer {
   overflow: hidden;
   display: flex;
-  background-color: rgb(50,50,50)
-
-  
+  background-color: rgb(50,50,50);
+  cursor: pointer;
 }
 
 .openFile {
@@ -29,16 +27,15 @@
 }
 
 #openFileActive {
-  cursor: pointer;
   height: 1.5em;
   background-color: rgb(30,30,30);
   color: white;
 }
 
-
 #container {
 	overflow: hidden;
 }
+
 #explorer {
   overflow-y: auto;
 }
